--- a/tools/cargo-miden/Cargo.toml
+++ b/tools/cargo-miden/Cargo.toml
@@ -35,6 +35,8 @@ cargo-generate = "0.23"
 path-absolutize = "3.1.1"
 tokio.workspace = true
 cargo-config2 = "0.1.24"
+serde = { version = "1.0", features = ["derive"] }
+toml = "0.8"
 
 [dev-dependencies]
 miden-mast-package.workspace = true
