fix: enable `std` feature for `miden-assembly`
in `midenc-session` and `midenc-base-sys`

--- a/midenc-session/Cargo.toml
+++ b/midenc-session/Cargo.toml
@@ -15,7 +15,13 @@ edition.workspace = true
 
 [features]
 default = ["std"]
-std = ["dep:termcolor", "dep:parking_lot", "dep:clap", "anyhow/std"]
+std = [
+    "dep:termcolor",
+    "dep:parking_lot",
+    "dep:clap",
+    "anyhow/std",
+    "miden-assembly/std",
+]
 
 [dependencies]
 anyhow.workspace = true
