feature(cargo-miden): Detect the `cargo-miden` project type (program or library)

--- a/tests/rust-apps-wasm/rust-sdk/cross-ctx-account/Cargo.toml
+++ b/tests/rust-apps-wasm/rust-sdk/cross-ctx-account/Cargo.toml
@@ -39,6 +39,9 @@ overflow-checks = false
 debug = true
 trim-paths = ["diagnostics", "object"]
 
+[package.metadata.miden]
+supported-types = ["RegularAccountUpdatableCode"]
+
 # TODO: switch to miden table
 [package.metadata.component]
 package = "miden:cross-ctx-account"
