--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,9 +32,9 @@ version = "0.0.8"
 rust-version = "1.86"
 authors = ["Miden contributors"]
 description = "An intermediate representation and compiler for Miden Assembly"
-repository = "https://github.com/0xPolygonMiden/compiler"
-homepage = "https://github.com/0xPolygonMiden/compiler"
-documentation = "https://github.com/0xPolygonMiden/compiler"
+repository = "https://github.com/0xMiden/compiler"
+homepage = "https://github.com/0xMiden/compiler"
+documentation = "https://github.com/0xMiden/compiler"
 categories = ["compilers"]
 keywords = ["compiler", "miden"]
 license = "MIT"
@@ -101,19 +101,19 @@ miden-formatting = { version = "0.1", default-features = false }
 # miden-mast-package = { version = "0.13.0", default-features = false }
 
 # use the VM from the next branch with merged
-# https://github.com/0xPolygonMiden/miden-vm/pull/1731
-miden-assembly = { version = "0.14.0", default-features = false, git = "https://github.com/0xPolygonMiden/miden-vm", rev = "614cd7f9b52f45238b0ab59c71ebb49325051e5d" }
+# https://github.com/0xMiden/miden-vm/pull/1731
+miden-assembly = { version = "0.14.0", default-features = false, git = "https://github.com/0xMiden/miden-vm", rev = "614cd7f9b52f45238b0ab59c71ebb49325051e5d" }
 miden-core = { version = "0.14.0", default-features = false, features = [
     "diagnostics",
-], git = "https://github.com/0xPolygonMiden/miden-vm", rev = "614cd7f9b52f45238b0ab59c71ebb49325051e5d" }
-miden-processor = { version = "0.14.0", default-features = false, git = "https://github.com/0xPolygonMiden/miden-vm", rev = "614cd7f9b52f45238b0ab59c71ebb49325051e5d" }
+], git = "https://github.com/0xMiden/miden-vm", rev = "614cd7f9b52f45238b0ab59c71ebb49325051e5d" }
+miden-processor = { version = "0.14.0", default-features = false, git = "https://github.com/0xMiden/miden-vm", rev = "614cd7f9b52f45238b0ab59c71ebb49325051e5d" }
 miden-stdlib = { version = "0.14.0", default-features = false, features = [
     "with-debug-info",
-], git = "https://github.com/0xPolygonMiden/miden-vm", rev = "614cd7f9b52f45238b0ab59c71ebb49325051e5d" }
-miden-mast-package = { version = "0.14.0", default-features = false, git = "https://github.com/0xPolygonMiden/miden-vm", rev = "614cd7f9b52f45238b0ab59c71ebb49325051e5d" }
+], git = "https://github.com/0xMiden/miden-vm", rev = "614cd7f9b52f45238b0ab59c71ebb49325051e5d" }
+miden-mast-package = { version = "0.14.0", default-features = false, git = "https://github.com/0xMiden/miden-vm", rev = "614cd7f9b52f45238b0ab59c71ebb49325051e5d" }
 
 # This is here for convenience if we need to quickly use a git ref of the VM crates
-#miden-assembly = { version = "0.11.0", git = "https://github.com/0xPolygonMiden/miden-vm", rev = "4d23f948bbf0c8fb7cd7ecba80bb02d37c1724bb" }
+#miden-assembly = { version = "0.11.0", git = "https://github.com/0xMiden/miden-vm", rev = "4d23f948bbf0c8fb7cd7ecba80bb02d37c1724bb" }
 midenc-codegen-masm = { version = "0.0.8", path = "codegen/masm" }
 midenc-dialect-arith = { version = "0.0.8", path = "dialects/arith" }
 midenc-dialect-hir = { version = "0.0.8", path = "dialects/hir" }
