--- a/tools/cargo-miden/Cargo.toml
+++ b/tools/cargo-miden/Cargo.toml
@@ -35,9 +35,9 @@ cargo-generate = "0.23"
 path-absolutize = "3.1.1"
 tokio.workspace = true
 cargo-config2 = "0.1.24"
-serde = { version = "1.0", features = ["derive"] }
-toml = "0.8"
-serde_json = "1.0"                                 # Added serde_json
+serde.workspace = true
+toml.workspace = true
+serde_json = "1.0"
 
 [dev-dependencies]
 miden-mast-package.workspace = true
