--- a/tests/rust-apps-wasm/rust-sdk/cross-ctx-account/Cargo.toml
+++ b/tests/rust-apps-wasm/rust-sdk/cross-ctx-account/Cargo.toml
@@ -47,8 +47,10 @@ supported-types = ["RegularAccountUpdatableCode"]
 package = "miden:cross-ctx-account"
 
 [package.metadata.component.target.dependencies]
-"miden:base" = { path = "../wit-sdk/miden.wit" }
-"miden:core-import" = { path = "../wit-sdk/miden-core-import.wit" }
+"miden:base" = { path = "../../../../sdk/base/wit/miden.wit" }
+"miden:core-intrinsics" = { path = "../../../../sdk/stdlib-sys/wit/miden-core-intrinsics.wit" }
+"miden:core-stdlib" = { path = "../../../../sdk/stdlib-sys/wit/miden-core-stdlib.wit" }
+"miden:core-base" = { path = "../../../../sdk/base-sys/wit/miden-core-base.wit" }
 
 [package.metadata.cargo-machete]
 ignored = ["wit-bindgen-rt"]
