--- a/tests/rust-apps-wasm/rust-sdk/cross-ctx-note/Cargo.toml
+++ b/tests/rust-apps-wasm/rust-sdk/cross-ctx-note/Cargo.toml
@@ -48,8 +48,10 @@ trim-paths = ["diagnostics", "object"]
 package = "miden:cross-ctx-note"
 
 [package.metadata.component.target.dependencies]
-"miden:base" = { path = "../wit-sdk/miden.wit" }
-"miden:core-import" = { path = "../wit-sdk/miden-core-import.wit" }
+"miden:base" = { path = "../../../../sdk/base/wit/miden.wit" }
+"miden:core-intrinsics" = { path = "../../../../sdk/stdlib-sys/wit/miden-core-intrinsics.wit" }
+"miden:core-stdlib" = { path = "../../../../sdk/stdlib-sys/wit/miden-core-stdlib.wit" }
+"miden:core-base" = { path = "../../../../sdk/base-sys/wit/miden-core-base.wit" }
 "miden:cross-ctx-account" = { path = "../cross-ctx-account/wit/cross-ctx-account.wit" }
 
 [package.metadata.cargo-machete]
