--- a/sdk/base/Cargo.toml
+++ b/sdk/base/Cargo.toml
@@ -17,3 +17,10 @@ miden-base-sys = { version = "0.0.8", path = "../base-sys", features = [
 ] }
 miden-stdlib-sys = { version = "0.0.8", path = "../stdlib-sys" }
 miden-base-macros = { version = "0.0.8", path = "../base-macros" }
+
+[features]
+default = []
+wit = [
+    "miden-base-sys/wit",
+    "miden-stdlib-sys/wit",
+]
