--- a/sdk/sdk/Cargo.toml
+++ b/sdk/sdk/Cargo.toml
@@ -21,3 +21,11 @@ miden-base = { version = "0.0.8", path = "../base" }
 miden-base-sys = { version = "0.0.8", path = "../base-sys", features = [
     "bindings",
 ] }
+
+[features]
+default = []
+wit = [
+    "miden-base/wit",
+    "miden-base-sys/wit", 
+    "miden-stdlib-sys/wit"
+]
