--- a/tools/cargo-miden/Cargo.toml
+++ b/tools/cargo-miden/Cargo.toml
@@ -38,6 +38,13 @@ cargo-config2 = "0.1.24"
 serde.workspace = true
 toml.workspace = true
 serde_json = "1.0"
+miden-stdlib-sys = { version = "0.0.8", path = "../../sdk/stdlib-sys", features = [
+    "wit",
+] }
+miden-base-sys = { version = "0.0.8", path = "../../sdk/base-sys", features = [
+    "wit",
+] }
+miden-base = { version = "0.0.8", path = "../../sdk/base", features = ["wit"] }
 
 [dev-dependencies]
 miden-mast-package.workspace = true
