--- a/midenc-session/Cargo.toml
+++ b/midenc-session/Cargo.toml
@@ -21,6 +21,7 @@ std = [
     "dep:clap",
     "anyhow/std",
     "miden-assembly/std",
+    "miden-lib/std",
 ]
 
 [dependencies]
@@ -34,9 +35,7 @@ miden-mast-package.workspace = true
 miden-stdlib.workspace = true
 midenc-hir-symbol.workspace = true
 midenc-hir-macros.workspace = true
-miden-base-sys = { version = "0.0.8", path = "../sdk/base-sys", features = [
-    "masl-lib",
-] }
+miden-lib.workspace = true
 parking_lot = { workspace = true, optional = true }
 termcolor = { version = "1.4.1", optional = true }
 thiserror.workspace = true
