--- a/midenc-debug/Cargo.toml
+++ b/midenc-debug/Cargo.toml
@@ -19,6 +19,7 @@ log.workspace = true
 glob = "0.3.1"
 miden-assembly.workspace = true
 miden-core.workspace = true
+miden-lib.workspace = true
 miden-mast-package.workspace = true
 miden-processor.workspace = true
 midenc-session.workspace = true
