--- a/examples/collatz/rust-toolchain.toml
+++ b/examples/collatz/rust-toolchain.toml
@@ -1,5 +1,5 @@
 [toolchain]
 channel = "nightly-2025-01-16"
 components = ["rustfmt", "rust-src"]
-targets = ["wasm32-wasi"]
+targets = ["wasm32-wasip1"]
 profile = "minimal"
