refactor: copy `cargo-component` code into `cargo-miden` as a module

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -113,6 +113,12 @@ thiserror = { package = "miden-thiserror", version = "1.0" }
 toml = { version = "0.8", features = ["preserve_order"] }
 tokio = { version = "1.39.2", features = ["rt", "time", "macros"] }
 wat = "1.0.69"
+wasmparser = { version = "0.227", default-features = false, features = [
+    "features",
+    "component-model",
+    "validate",
+    "simd",
+] }
 
 # Workspace crates
 midenc-codegen-masm = { version = "0.0.8", path = "codegen/masm" }
