--- a/frontend/wasm/Cargo.toml
+++ b/frontend/wasm/Cargo.toml
@@ -31,12 +31,7 @@ midenc-dialect-arith.workspace = true
 midenc-hir-symbol.workspace = true
 midenc-session.workspace = true
 thiserror.workspace = true
-wasmparser = { version = "0.227", default-features = false, features = [
-    "features",
-    "component-model",
-    "validate",
-    "simd",
-] }
+wasmparser.workspace = true
 
 [dev-dependencies]
 wat.workspace = true
