--- a/sdk/base/Cargo.toml
+++ b/sdk/base/Cargo.toml
@@ -12,13 +12,10 @@ readme.workspace = true
 edition.workspace = true
 
 [dependencies]
-miden-base-sys = { version = "0.0.8", path = "../base-sys" }
-miden-stdlib-sys = { version = "0.0.8", path = "../stdlib-sys" }
-miden-base-macros = { version = "0.0.8", path = "../base-macros" }
+miden-base-sys = { version = "0.1.0", path = "../base-sys" }
+miden-stdlib-sys = { version = "0.1.0", path = "../stdlib-sys" }
+miden-base-macros = { version = "0.1.0", path = "../base-macros" }
 
 [features]
 default = []
-wit = [
-    "miden-base-sys/wit",
-    "miden-stdlib-sys/wit",
-]
+wit = ["miden-base-sys/wit", "miden-stdlib-sys/wit"]
