--- a/sdk/base-macros/Cargo.toml
+++ b/sdk/base-macros/Cargo.toml
@@ -17,12 +17,12 @@ proc-macro = true
 [dependencies]
 proc-macro2.workspace = true
 quote.workspace = true
-miden-objects = { version = "0.8", default-features = false }
+miden-objects.workspace = true
 semver.workspace = true
 toml.workspace = true
 syn.workspace = true
 
 [dev-dependencies]
-miden-base = { version = "0.0.8", path = "../base" }
-miden-objects = { version = "0.8", features = ["std"] }
+miden-base = { version = "0.1.0", path = "../base" }
+miden-objects = { workspace = true, features = ["std"] }
 expect-test.workspace = true
