--- a/tests/integration/Cargo.toml
+++ b/tests/integration/Cargo.toml
@@ -40,10 +40,10 @@ sha2 = "0.10"
 walkdir = "2.5.0"
 
 [dev-dependencies]
-miden-objects = { version = "0.8", features = ["std"] }
 blake3 = "1.5"
 concat-idents = "1.1"
 miden-core.workspace = true
+miden-objects = { workspace = true, features = ["std"] }
 
 [package.metadata.cargo-machete]
 ignored = ["blake3"]
