--- a/tools/cargo-miden/Cargo.toml
+++ b/tools/cargo-miden/Cargo.toml
@@ -65,7 +65,7 @@ parse_arg = "0.1.6"
 toml_edit = { version = "0.22.9", features = ["serde"] }
 libc = "0.2.153"
 unicode-width = "0.2.0"
-git2 = { version = "0.20.1", default-features = false }
+# git2 = { version = "0.20.1", default-features = false }
 url = { version = "2.5.0", features = ["serde"] }
 tokio-util = "0.7.10"
 futures = "0.3.30"
