--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,11 @@ on:
       - "**.txt"
       - "docs/**"
 
+env:
+  # Set the new value when the cache grows too much and we hit the runner's disk space limit
+  # via https://github.com/rust-lang/docs.rs/pull/2433
+  RUST_CACHE_KEY: rust-cache-20250522
+
 jobs:
   lint:
     name: lint
@@ -30,6 +35,7 @@ jobs:
         with:
           # Use a common cache for the basic compilation/formatter/clippy checks
           shared-key: ${{ github.workflow }}-shared
+          prefix-key: ${{ env.RUST_CACHE_KEY }}
           save-if: ${{ github.ref == 'refs/heads/next' }}
       - name: Install cargo-make
         run: |
@@ -58,6 +64,7 @@ jobs:
         with:
           # Use a common cache for the basic compilation/formatter/clippy checks
           shared-key: ${{ github.workflow }}-shared
+          prefix-key: ${{ env.RUST_CACHE_KEY }}
           # But do not save this cache, just use it
           save-if: false
       - name: Install cargo-make
@@ -84,6 +91,7 @@ jobs:
           # NOTE: We use a different cache for the tests, so they can be run in parallel, but we
           # also share the cache for the tests for efficiency
           shared-key: ${{ github.workflow }}-shared-tests
+          prefix-key: ${{ env.RUST_CACHE_KEY }}
           save-if: ${{ github.ref == 'refs/heads/next' }}
       - name: Install cargo-make
         run: |
@@ -126,6 +134,7 @@ jobs:
         uses: Swatinem/rust-cache@v2
         with:
           shared-key: ${{ github.workflow }}-shared-tests
+          prefix-key: ${{ env.RUST_CACHE_KEY }}
           # Do not persist the cache, leave that to the unit tests, we just use the cache here
           save-if: false
       - name: Install cargo-make
@@ -153,6 +162,7 @@ jobs:
         uses: Swatinem/rust-cache@v2
         with:
           shared-key: ${{ github.workflow }}-shared-tests
+          prefix-key: ${{ env.RUST_CACHE_KEY }}
           # Do not persist the cache, leave that to the unit tests, we just use the cache here
           save-if: false
       - name: Install cargo-make
