test: add `counter_contract_debug_build` test to reproduce #510,
Add debug build artifacts support in integration test suite.
Add missing `rust-toolchain.toml` in `examples` projects

--- a/examples/counter-contract/Cargo.toml
+++ b/examples/counter-contract/Cargo.toml
@@ -25,7 +25,6 @@ supported-types = ["RegularAccountUpdatableCode"]
 "miden:core-stdlib" = { path = "../../sdk/stdlib-sys/wit/miden-core-stdlib.wit" }
 "miden:core-base" = { path = "../../sdk/base-sys/wit/miden-core-base.wit" }
 
-
 [profile.release]
 # optimize the output for size
 opt-level = "z"
@@ -42,6 +41,6 @@ panic = "abort"
 # library code unintentionally
 panic = "abort"
 opt-level = 1
-debug-assertions = true
+debug-assertions = false
 overflow-checks = false
 debug = true
