--- a/examples/fibonacci/rust-toolchain.toml
+++ b/examples/fibonacci/rust-toolchain.toml
@@ -1,5 +1,5 @@
 [toolchain]
 channel = "nightly-2025-03-20"
 components = ["rustfmt", "rust-src"]
-targets = ["wasm32-wasip1"]
+targets = ["wasm32-wasip1", "wasm32-wasip2"]
 profile = "minimal"
