--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,11 +58,15 @@ clap = { version = "4.5", default-features = false, features = [
     "suggestions",
     "error-context",
 ] }
-cranelift-entity = "0.108"
-compact_str = { version = "0.8", default-features = false }
+cranelift-entity = "0.120"
+compact_str = { version = "0.9", default-features = false }
 env_logger = "0.11"
 expect-test = "1.5"
-hashbrown = { version = "0.14.5", features = ["nightly"] }
+hashbrown = { version = "0.15", features = ["nightly"] }
+hashbrown_old_nightly_hack = { package = "hashbrown", version = "0.14.5", features = [
+    "allocator-api2",
+    "nightly",
+] }
 Inflector = "0.11"
 intrusive-collections = "0.9"
 inventory = "0.3"
