--- a/hir-symbol/Cargo.toml
+++ b/hir-symbol/Cargo.toml
@@ -27,6 +27,7 @@ serde = { workspace = true, optional = true }
 [build-dependencies]
 Inflector.workspace = true
 hashbrown.workspace = true
+hashbrown_old_nightly_hack.workspace = true
 rustc-hash.workspace = true
 toml.workspace = true
 
