chore: remove `expect-test` in favor of `midenc-expect-test`

--- a/codegen/masm/Cargo.toml
+++ b/codegen/masm/Cargo.toml
@@ -37,6 +37,6 @@ smallvec.workspace = true
 thiserror.workspace = true
 
 [dev-dependencies]
-expect-test.workspace = true
+midenc-expect-test.workspace = true
 proptest.workspace = true
 env_logger.workspace = true
