refactor: move `midenc-expect-test` to `tools` folder

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,6 @@ members = [
     "sdk/*",
     "tools/*",
     "tests/integration",
-    "tests/expect-test",
 ]
 exclude = [
     "sdk/.cargo",
@@ -146,7 +145,7 @@ midenc-debug = { version = "0.1.0", path = "midenc-debug" }
 midenc-session = { version = "0.1.0", path = "midenc-session" }
 cargo-miden = { version = "0.1.0", path = "tools/cargo-miden" }
 miden-integration-tests = { version = "0.0.0", path = "tests/integration" }
-midenc-expect-test = { version = "0.1.0", path = "tests/expect-test" }
+midenc-expect-test = { version = "0.1.0", path = "tools/expect-test" }
 
 [patch.crates-io]
 #miden-assembly = { git = "https://github.com/0xMiden/miden-vm", rev = "614cd7f9b52f45238b0ab59c71ebb49325051e5d" }
