--- a/Makefile.toml
+++ b/Makefile.toml
@@ -177,7 +177,7 @@ run_task = [{ name = ["midenc"] }]
 [tasks.install]
 category = "Install"
 description = "Installs the compiler via cargo"
-run_task = [{ name = ["install-midenc"] }]
+run_task = [{ name = ["install-midenc"] }, { name = ["install-cargo-miden"] }]
 
 [tasks.check]
 category = "Build"
