--- a/tests/integration/Cargo.toml
+++ b/tests/integration/Cargo.toml
@@ -22,7 +22,12 @@ glob = "0.3.1"
 log.workspace = true
 miden-assembly.workspace = true
 miden-core.workspace = true
+miden-client = { version = "0.9", git = "https://github.com/0xMiden/miden-client", rev = "f98ae87fc3f77e269c3c1e412d1b8ac650aa6fe3", features = [
+    "tonic",
+    "sqlite",
+] }
 miden-mast-package.workspace = true
+miden-objects = { workspace = true, features = ["std"] }
 miden-processor.workspace = true
 midenc-dialect-arith.workspace = true
 midenc-dialect-hir.workspace = true
@@ -36,14 +41,15 @@ midenc-debug.workspace = true
 cargo-miden.workspace = true
 wasmprinter = "0.227"
 proptest.workspace = true
+rand = "0.9"
 sha2 = "0.10"
+temp-dir = "0.1"
+tokio.workspace = true
 walkdir = "2.5.0"
 
 [dev-dependencies]
 blake3 = "1.5"
 concat-idents = "1.1"
-miden-core.workspace = true
-miden-objects = { workspace = true, features = ["std"] }
 
 [package.metadata.cargo-machete]
 ignored = ["blake3"]
