--- a/examples/basic-wallet/Cargo.toml
+++ b/examples/basic-wallet/Cargo.toml
@@ -1,7 +1,7 @@
 cargo-features = ["trim-paths"]
 
 [package]
-name = "p2id"
+name = "basic_wallet"
 version = "0.1.0"
 edition = "2021"
 
@@ -13,9 +13,20 @@ crate-type = ["cdylib"]
 [dependencies]
 # Miden SDK consists of a stdlib (intrinsic functions for VM ops, stdlib functions and types)
 # and transaction kernel API for the Miden rollup
-miden = { path = "../../../../sdk/sdk" }
+miden = { path = "../../sdk/sdk" }
 wit-bindgen-rt = "0.28"
 
+[package.metadata.component]
+package = "miden:basic-wallet"
+
+[package.metadata.miden]
+supported-types = ["RegularAccountUpdatableCode"]
+
+[package.metadata.component.target.dependencies]
+"miden:base" = { path = "../../sdk/base/wit/miden.wit" }
+"miden:core-intrinsics" = { path = "../../sdk/stdlib-sys/wit/miden-core-intrinsics.wit" }
+"miden:core-stdlib" = { path = "../../sdk/stdlib-sys/wit/miden-core-stdlib.wit" }
+"miden:core-base" = { path = "../../sdk/base-sys/wit/miden-core-base.wit" }
 
 [profile.release]
 # optimize the output for size
@@ -38,12 +49,3 @@ debug-assertions = false
 overflow-checks = false
 debug = true
 trim-paths = ["diagnostics", "object"]
-
-# TODO: switch to miden table
-[package.metadata.component]
-package = "miden:p2id"
-
-[package.metadata.component.target.dependencies]
-"miden:base" = { path = "../wit-sdk/miden.wit" }
-"miden:core-import" = { path = "../wit-sdk/miden-core-import.wit" }
-"miden:basic-wallet" = { path = "../basic-wallet/wit/basic-wallet.wit" }
