chore: add lto = "fat: in Cargo.toml for release profile
Signed-off-by: Tomas Fabrizio Orsi <tomas.orsi@lambdaclass.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -165,6 +165,7 @@ codegen-units = 1
 opt-level = 2
 debug = true
 codegen-units = 1
+lto = "fat"
 
 # The following crates are always built with optimizations
 [profile.test.package.proptest]
