--- a/dialects/scf/Cargo.toml
+++ b/dialects/scf/Cargo.toml
@@ -25,5 +25,6 @@ midenc-hir-transform.workspace = true
 bitvec.workspace = true
 
 [dev-dependencies]
+midenc-dialect-hir.workspace = true
 midenc-expect-test.workspace = true
 env_logger.workspace = true
