--- a/tests/integration/Cargo.toml
+++ b/tests/integration/Cargo.toml
@@ -46,6 +46,8 @@ sha2 = "0.10"
 temp-dir = "0.1"
 tokio.workspace = true
 walkdir = "2.5.0"
+uuid = { version = "1.10", features = ["v4"] }
+fs2 = "0.4"
 
 [dev-dependencies]
 blake3 = "1.5"
