refactor(tests): extract all local node and testnet integration tests in
the `miden-integration-node-tests` crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ members = [
     "sdk/*",
     "tools/*",
     "tests/integration",
+    "tests/integration-node",
 ]
 exclude = [
     "sdk/.cargo",
