chore: disable publishing for `midenc-expect-test` crate

--- a/tools/expect-test/Cargo.toml
+++ b/tools/expect-test/Cargo.toml
@@ -10,6 +10,7 @@ keywords.workspace = true
 license.workspace = true
 readme.workspace = true
 edition.workspace = true
+publish = false
 
 [dependencies]
 similar = "2"
