--- a/midenc-session/Cargo.toml
+++ b/midenc-session/Cargo.toml
@@ -21,7 +21,12 @@ std = [
     "dep:clap",
     "anyhow/std",
     "miden-assembly/std",
+    "miden-assembly-syntax/std",
+    "miden-core/std",
+    "miden-debug-types/std",
     "miden-lib/std",
+    "miden-utils-diagnostics/std",
+    "miden-utils-sync/std",
 ]
 
 [dependencies]
@@ -30,9 +35,13 @@ clap = { workspace = true, optional = true }
 inventory.workspace = true
 log.workspace = true
 miden-assembly.workspace = true
+miden-assembly-syntax.workspace = true
 miden-core.workspace = true
+miden-debug-types.workspace = true
 miden-mast-package.workspace = true
 miden-stdlib.workspace = true
+miden-utils-diagnostics.workspace = true
+miden-utils-sync.workspace = true
 midenc-hir-symbol.workspace = true
 midenc-hir-macros.workspace = true
 miden-lib.workspace = true
