--- a/hir-symbol/Cargo.toml
+++ b/hir-symbol/Cargo.toml
@@ -13,7 +13,7 @@ edition.workspace = true
 
 [features]
 default = ["std"]
-std = ["dep:parking_lot"]
+std = ["dep:parking_lot", "miden-utils-sync/std", "serde?/std"]
 serde = ["dep:serde"]
 compact_str = ["dep:compact_str"]
 
@@ -21,7 +21,8 @@ compact_str = ["dep:compact_str"]
 compact_str = { workspace = true, optional = true }
 lock_api = "0.4"
 miden-formatting.workspace = true
-parking_lot = { version = "0.12", optional = true }
+miden-utils-sync.workspace = true
+parking_lot = { workspace = true, optional = true }
 serde = { workspace = true, optional = true }
 
 [build-dependencies]
@@ -29,7 +30,8 @@ Inflector.workspace = true
 hashbrown.workspace = true
 hashbrown_old_nightly_hack.workspace = true
 rustc-hash.workspace = true
-toml.workspace = true
+serde.workspace = true
+toml = { workspace = true, features = ["parse"] }
 
 [package.metadata.cargo-machete]
 ignored = ["Inflector", "hashbrown", "rustc-hash", "toml"]
