--- a/midenc-debug/Cargo.toml
+++ b/midenc-debug/Cargo.toml
@@ -18,15 +18,20 @@ clap.workspace = true
 log.workspace = true
 glob = "0.3.1"
 miden-assembly.workspace = true
-miden-core.workspace = true
+miden-core = { workspace = true, features = ["serde"] }
+miden-debug-types.workspace = true
 miden-lib.workspace = true
 miden-mast-package.workspace = true
-miden-processor.workspace = true
+miden-processor = { workspace = true, features = [
+    "std",
+    "concurrent",
+    "testing",
+] }
 midenc-session.workspace = true
 midenc-codegen-masm.workspace = true
 midenc-hir.workspace = true
 thiserror.workspace = true
-toml.workspace = true
+toml = { workspace = true, features = ["parse"] }
 proptest.workspace = true
 serde.workspace = true
 ratatui = "0.29.0"
@@ -43,3 +48,6 @@ syntect = { version = "5.2.0", default-features = false, features = [
     "yaml-load",
     "regex-onig",
 ] }
+
+[dev-dependencies]
+toml = { workspace = true, features = ["parse", "display"] }
