--- a/tests/integration/Cargo.toml
+++ b/tests/integration/Cargo.toml
@@ -22,7 +22,7 @@ glob = "0.3.1"
 log.workspace = true
 miden-assembly.workspace = true
 miden-core.workspace = true
-miden-client = { version = "0.9", git = "https://github.com/0xMiden/miden-client", rev = "f98ae87fc3f77e269c3c1e412d1b8ac650aa6fe3", features = [
+miden-client = { version = "0.10", features = [
     "tonic",
     "sqlite",
 ] }
