--- a/Makefile.toml
+++ b/Makefile.toml
@@ -21,6 +21,9 @@ RUST_BACKTRACE = { value = "${BACKTRACE_DEFAULT}", condition = { env_not_set = [
 MIDENC_BIN_DIR = "${CARGO_MAKE_WORKSPACE_WORKING_DIRECTORY}/bin"
 MIDENC_INSTALL_DIR = "${MIDENC_BIN_DIR}/${CARGO_MAKE_RUST_TARGET_TRIPLE}"
 
+# Workaround for https://github.com/0xMiden/miden-vm/issues/2025
+RUST_MIN_STACK = 16777216
+
 [env.development]
 MIDENC_BUILD_PROFILE = "debug"
 
@@ -257,7 +260,7 @@ args = ["audit"]
 
 [tasks.test]
 category = "Test"
-description = "Runs all tests"
+description = "Runs all tests including integration node tests"
 dependencies = ["test-rust"]
 
 [tasks.install-cargo-miden]
