refactor: rename `io` to `advice`, export modules in stdlib SDK

--- a/hir-symbol/src/symbols.toml
+++ b/hir-symbol/src/symbols.toml
@@ -106,9 +106,10 @@ blake3 = {}
 crypto = {}
 debug = {}
 dsa = {}
+felt_module = { value = "felt" }
 hashes = {}
 intrinsics = {}
-io = {}
+advice = {}
 miden = {}
 mem = {}
 note = {}
