feature: add `project-kind` with `account`, `note-script` and
`transaction-script` variants.

--- a/examples/basic-wallet-tx-script/Cargo.toml
+++ b/examples/basic-wallet-tx-script/Cargo.toml
@@ -19,6 +19,9 @@ wit-bindgen-rt = "0.28"
 [package.metadata.component]
 package = "miden:basic-wallet-tx-script"
 
+[package.metadata.miden]
+project-kind = "transaction-script"
+
 # Miden dependencies for cargo-miden build/linking
 [package.metadata.miden.dependencies]
 "miden:basic-wallet" = { path = "../basic-wallet" }
