--- a/examples/basic-wallet/Cargo.toml
+++ b/examples/basic-wallet/Cargo.toml
@@ -20,6 +20,7 @@ wit-bindgen-rt = "0.28"
 package = "miden:basic-wallet"
 
 [package.metadata.miden]
+project-kind = "account"
 supported-types = ["RegularAccountUpdatableCode"]
 
 [package.metadata.component.target.dependencies]
