--- a/examples/p2id-note/Cargo.toml
+++ b/examples/p2id-note/Cargo.toml
@@ -19,6 +19,9 @@ wit-bindgen-rt = "0.28"
 [package.metadata.component]
 package = "miden:p2id"
 
+[package.metadata.miden]
+project-kind = "note-script"
+
 # Miden dependencies for cargo-miden build/linking
 [package.metadata.miden.dependencies]
 "miden:basic-wallet" = { path = "../basic-wallet" }
