--- a/examples/storage-example/Cargo.toml
+++ b/examples/storage-example/Cargo.toml
@@ -17,6 +17,7 @@ wit-bindgen-rt = "0.28"
 package = "miden:storage-example"
 
 [package.metadata.miden]
+project-kind = "account"
 supported-types = ["RegularAccountUpdatableCode"]
 
 [package.metadata.component.target.dependencies]
