--- a/tests/rust-apps-wasm/rust-sdk/cross-ctx-account-word/Cargo.toml
+++ b/tests/rust-apps-wasm/rust-sdk/cross-ctx-account-word/Cargo.toml
@@ -40,6 +40,7 @@ debug = true
 trim-paths = ["diagnostics", "object"]
 
 [package.metadata.miden]
+project-kind = "account"
 supported-types = ["RegularAccountUpdatableCode"]
 
 # TODO: switch to miden table
