--- a/codegen/masm/Cargo.toml
+++ b/codegen/masm/Cargo.toml
@@ -42,3 +42,4 @@ thiserror.workspace = true
 midenc-expect-test = { path = "../../tools/expect-test" }
 proptest.workspace = true
 env_logger.workspace = true
+itertools = "0.14.0"
