--- a/tools/cargo-miden/Cargo.toml
+++ b/tools/cargo-miden/Cargo.toml
@@ -35,12 +35,8 @@ tokio.workspace = true
 cargo-config2 = "0.1.24"
 serde.workspace = true
 serde_json = "1.0"
-miden-stdlib-sys = { version = "0.4.1", path = "../../sdk/stdlib-sys", features = [
-    "wit",
-] }
-miden-base-sys = { version = "0.4.1", path = "../../sdk/base-sys", features = [
-    "wit",
-] }
+miden-stdlib-sys = { version = "0.4.1", path = "../../sdk/stdlib-sys" }
+miden-base-sys = { version = "0.4.1", path = "../../sdk/base-sys" }
 miden-base = { version = "0.4.1", path = "../../sdk/base", features = ["wit"] }
 
 # from cargo-component
