refactor: split and move the rlib stub library compilation and linking from
the `cargo-miden` to the `miden-stdlib-sys`, `miden-base-sys` and `miden-sdk-alloc` crates build.rs build script.

--- a/Makefile.toml
+++ b/Makefile.toml
@@ -32,6 +32,9 @@ MIDENC_BUILD_PROFILE = "release"
 
 [tasks.init]
 run_task = "print-env"
+# Install proxies to the `llvm-tools` component, i.e. `rust-ar` proxy to the
+# LLVM `ar` needed to build stub libraries (see `build.rs` in `*-sys` crates)
+install_crate = { crate_name = "cargo-binutils" }
 
 [tasks.default]
 category = "Build"
