feature: draft `miden_generate!` macro and remove bindings generation in cargo-miden

--- a/examples/counter-contract/Cargo.toml
+++ b/examples/counter-contract/Cargo.toml
@@ -11,10 +11,11 @@ crate-type = ["cdylib"]
 
 [dependencies]
 miden = { path = "../../sdk/sdk" }
-wit-bindgen-rt = "0.28"
+# wit-bindgen-rt = "0.28"
+# wit-bindgen = { version = "0.46", default-features = false, features = ["macros"] }
 
-[package.metadata.component]
-package = "miden:counter-contract"
+# [package.metadata.component]
+# package = "miden:counter-contract"
 
 [package.metadata.miden]
 project-kind = "account"
@@ -22,4 +23,3 @@ supported-types = ["RegularAccountUpdatableCode"]
 
 [package.metadata.component.target.dependencies]
 "miden:base" = { path = "../../sdk/base/wit/miden.wit" }
-
