--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,8 +24,7 @@ members = [
 ]
 exclude = [
     "sdk/.cargo",
-    "tests/rust-apps-wasm",
-    "cargo-ext/tests/data",
+    "tests/",
     "examples",
 ]
 
@@ -92,7 +91,9 @@ miette = { package = "miden-miette", version = "7.1.1" }
 paste = "1.0"
 parking_lot = "0.12"
 parking_lot_core = "0.9"
-petgraph = "0.6"
+petgraph = { version = "0.8", default-features = false, features = [
+    "graphmap"
+] }
 pretty_assertions = "1.0"
 proptest = "1.4"
 proc-macro2 = "1.0"
