fix: remove midenc-hir-type from workspace deps

--- a/hir/Cargo.toml
+++ b/hir/Cargo.toml
@@ -29,7 +29,7 @@ inventory.workspace = true
 log.workspace = true
 miden-core.workspace = true
 midenc-hir-symbol.workspace = true
-midenc-hir-type.workspace = true
+midenc-hir-type = "0.4"
 midenc-hir-macros.workspace = true
 midenc-session.workspace = true
 rustc-hash.workspace = true
